--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -20,88 +20,150 @@
       </div>
 
       <div class="content">
-        <div id="main" class="center">
-          <button class="btn" v-bind:class="{ 'btn-grey': setuppath=='online'}" v-on:click="selectPath('online')">Online</button>
-          <button class="btn" v-bind:class="{ 'btn-grey': setuppath=='offline'}" v-on:click="selectPath('offline')">Offline</button>
-        </div>
 
         <div v-show="errors && errors.length" id="feedback" class="font80">
-          <hr />
-          <p>Error section:</p>
+          <p>Errors:</p>
           <ul v-show="errors && errors.length">
-            <li v-for="error of errors">
-              {{error.message}}
+            <li v-for="error of errors" class="font70">
+              {{error.message}} -
+              {{error}}
             </li>
           </ul>
+          <hr />
         </div>
 
-        <hr />
-
         <!-- online setup -->
-        <div v-show="setuppath == 'online'" id="wifisetup">
-          <h3 class="center">Setup wifi</h3>
-          <p class="font70">Your kit will post data online every minute</p>
+        <div id="wifisetup">
+          <p class="font70">If you don't have a Token, get one at http://onboarding.smartcitizen.me</p>
           <form method="post" action="/">
             <div class="field-group">
+              <label>Token</label>
+              <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6" placeholder="6 letters">
+            </div>
+            <h5>Network Settings</h5>
+             <div class="field-group">
               <label>SSID (Network name)</label>
               <select v-model="selectedwifi" name="ssid" type="text" length=64>
                 <!-- Here goes the Access point list -->
-                <option disabled value="">Select wifi ({{wifis["nets"].length}})</option>
+                <option disabled value="">Select your wifi ({{wifis["nets"].length}})</option>
                 <option v-for="x in sortedWifi" :key="x.rssi" :value="x.ssid">{{x.ssid}} ({{x.rssi}}, {{x.ch}})</option>
               </select>
             </div>
-            <button class="btn" type="button" v-on:click="axiosFetch('aplist')">Refresh Wifi list</button>
+            <button class="btn"  id="refreshbtn" type="button" v-on:click="axiosFetch('aplist')">Refresh Wifi list</button>
             <div class="field-group">
               <label>Password</label>
-              <input name="password" type="text" v-model='wifipass' length=64>
+              <input name="password" type="text" v-model='wifipass' length=64 placeholder="Your wifi password">
             </div>
-            <div class="field-group">
-              <label>Token</label>
-              <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6">
-            </div>
-            <button class="btn" type="button" id="connect" v-on:click="axiosGet('set','online')">Connect</button>
+           <button class="btn" type="button" id="connect" v-on:click="axiosGet('set','online')">Connect</button>
+
+           <div class="font70" v-if="apiresponse">
+             <h5>API Response:</h5>
+             <table>
+               <tr v-for="value, index in apiresponse">
+                 <td><b>{{index}}</b></td>
+                 <td>{{value}}</td>
+               </tr>
+             </table>
+           </div>
+
+           <!-- advanced -->
+           <hr />
+           <button type="button"  id="advancedbtn" class="btn " v-bind:class="{ 'btn-blue': advanced}" v-on:click="showAdvanced()">Advanced</button>
+
+           <div v-show="advanced" id="advanced" class="">
+
+
+             <div id="Intervals">
+               <h5>Global - Intervals</h5>
+               <div>
+                 <p class="font70">How often should the kit go online to publish the data?</p>
+                 <label for="pubint">Publish interval hours: {{publishinterval}}</label>
+                 <input type="range" name="pubint" id="" v-model="publishinterval" max="100" />
+               </div>
+               <div>
+                 <p class="font70">How often should the kit poll the sensors?</p>
+                 <label for="readint">Reading interval seconds: {{readinginterval}}</label>
+                 <input type="range" name="readint" id="" value="60" v-model="readinginterval" max="1000" />
+               </div>
+               <div>
+                 <p>Estimated battery duration: {{ Number(publishinterval * (readinginterval / 100)).toFixed(1) }} Hours</p>
+               </div>
+             </div>
+
+             <br />
+             <button type="button"  id="sensorsbtn" class="btn " v-bind:class="{ 'btn-blue': sensors}" v-on:click="showSensors()">Show sensors</button>
+
+             <div id="sensors" v-if="sensors">
+               <h5>Sensors</h5>
+               <p class="font70">The new SCK allows you to configure each sensor independently.</p>
+               <div class="check-sensor">
+                 <label for="sensorlight">Light</label>
+                 <input type="checkbox" name="sensor1" id="sensorlight" value="" v-model="sensor1" />
+               </div>
+               <div class="check-sensor">
+                 <label for="sensormic">Microphone</label>
+                 <input type="checkbox" name="sensor2" id="sensormic" value="" v-model="sensor2" />
+               </div>
+               <div class="check-sensor">
+                 <label for="sensorco2">CO2</label>
+                 <input type="checkbox" name="sensor3" id="sensorco2" value="" v-model="sensor3" />
+               </div>
+               <div class="check-sensor">
+                 <label for="sensorthermo">Thermometer</label>
+                 <input type="checkbox" name="sensor4" id="sensorthermo" value="" v-model="sensor4" />
+               </div>
+             </div><!-- /sensors -->
+
+             <div id="sdcard">
+
+               <hr />
+               <h5>SD CARD</h5>
+               <div>
+                 <p class="font70">The kit should never post my data with Wifi</p>
+                 <input type="checkbox" name="usesdcard" id="sdlog" value="" v-model="sdlog" />
+                 <label for="sdlog"> Log *only* to SD Card</label>
+               </div>
+               <hr />
+
+               <div v-if="sdlog">
+                 <p class="font70">When your kit runs out of battery, it loses the time. This will allow the kit to go online and fetch the time.</p>
+                 <p class="font70">If you don't, all your measurements will be dated from the year 1971</p>
+                 <input type="checkbox" name="usewifisync" id="usewifisync" v-model="wifisync" />
+                 <label for="usewifisync"> Use Wifi to sync time</label>
+                 <p v-if="!wifipass && wifisync" class="color-red font70">Don't forget to give the kit your wifi password!</p>
+                 <hr />
+               </div>
+               <p class="font70">Your kit will be offline and save data to the SD CARD.</p>
+               <div v-show="browsertime != devicetime" id="timesync">
+                 <table>
+                   <tr><td>Browser time:</td><td>{{ browsertime }}</td></tr>
+                   <tr><td>Device time: </td><td>{{ devicetime }}</td></tr>
+                   <tr><td>Diff: </td><td>{{ browsertime - devicetime }}</td></tr>
+                 </table>
+               </div>
+
+               <p class="font70">When you click this button the device will go offline and start working. </p>
+               <p class="font70">(You will loose connection to the device)</p>
+               <button class="btn btn-red" type="button" v-on:click="axiosGet('set', 'synctime')">Start logging on SD Card</button>
+
+             </div> <!-- /sd card -->
+
+             <hr />
+             <button type="button"  id="kitinfobtn"  class="btn " v-bind:class="{ 'btn-blue': kitinfo}"  v-on:click="showKitinfo()">Show kit info</button>
+             <div id="kitinfo"  v-if="kitinfo" class="font70">
+               <p>Kit info:</p>
+               <ul v-show="debuginfo">
+                 <li v-for="value, index in debuginfo"><b>{{index}}</b>: {{value}}</li>
+               </ul>
+               <button class="btn" type="button" v-on:click="axiosFetch('status')">Refresh /status</button>
+             </div>
+
+             <hr />
+             <button type="button"  id="advancedbtn2" class="btn " v-bind:class="{ 'btn-blue': advanced}" v-on:click="showAdvanced()">Exit Advanced</button>
+           </div> <!-- /advanced -->
+
           </form>
-
-          <!-- advanced -->
-          <hr />
-          <button v-bind:class="{ 'btn-blue': advanced}" class="btn " v-on:click="showAdvanced()">Advanced</button>
-          <div v-show="advanced" id="advanced" class="">
-            <div class="font70" v-if="apiresponse">
-              <p>API Response:</p>
-              <table>
-                <tr v-for="value, index in apiresponse">
-                  <td><b>{{index}}</b></td>
-                  <td>{{value}}</td>
-                </tr>
-              </table>
-            </div>
-            <div class="font70">
-              <p>Debug info:</p>
-              <button class="btn" v-on:click="axiosFetch('status')">Refresh /status</button>
-              <ul v-show="debuginfo">
-                <li v-for="value, index in debuginfo"><b>{{index}}</b>: {{value}}</li>
-              </ul>
-            </div>
-            <hr />
-          </div> <!-- /advanced -->
-
-        </div> <!-- end network setup -->
-
-        <!-- offline setup -->
-        <div v-show="setuppath == 'offline'" id="offline">
-          <h3 class="center">SD CARD</h3>
-          <p class="font70">Your kit will be offline and save data to the SD CARD.</p>
-
-          <div v-show="browsertime != devicetime" id="timesync">
-            <p class="text-right font70">Browser time: {{ browsertime }}</p>
-            <p class="text-right font70">Device time: {{ devicetime }}</p>
-            <p class="text-right font70">Diff: {{ browsertime - devicetime }}</p>
-          </div>
-
-          <p class="font70">When you click this button the device will go offline and start working. </p>
-          <p class="font70">(You will loose connection to the device)</p>
-          <button class="btn" type="button" v-on:click="axiosGet('set', 'synctime')">Start logging on SD Card</button>
-        </div>
+        </div> <!-- end #wifisetup -->
 
       </div><!-- /content -->
     </div><!-- container -->
